--- a/public/css/board.css
+++ b/public/css/board.css
@@ -1,19 +1,19 @@
-body{
+html, body{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
     position: relative;
     display: grid;
     place-items: center;
-    width: 100%;
-    overflow: hidden;
     background-color: rgb(3, 3, 24);
-    padding: 0;
-    margin: 0;
 }
 
 .container{
     position: relative;
-    left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     margin: 0;
     justify-content: center;
@@ -29,7 +29,7 @@ body{
     display: flex;
     place-items: center;
     background-color: lightgrey;
-    bottom: -4rem;
+    bottom: -4.6rem;
     padding: 1rem;
     transition: bottom 1s;
     z-index: 99;
@@ -37,7 +37,7 @@ body{
 
 #colors:hover,
 #colors:hover .color:hover{
-    bottom: 1rem;
+    bottom: .3rem;
 }
 
 #colors .color{
@@ -70,7 +70,7 @@ body{
 }
 
 #colors .color:nth-child(5){
-    background-color: orangered;
+    background-color: yellow;
     border: none;
 }
 
