--- a/public/css/board.css
+++ b/public/css/board.css
@@ -99,6 +99,10 @@ html, body{
 }
 
 @media only screen and (max-width: 600px) {
+    body{
+        overflow-y: auto;
+    }
+    
     #colors{
         bottom: -2rem;
     }
