--- a/public/css/board.css
+++ b/public/css/board.css
@@ -105,11 +105,11 @@ html, body{
     }
 
     #colors{
-        bottom: 0rem;
+        bottom: 0;
     }
 
     #colors:hover,
     #colors:hover .color:hover{
-        bottom: 1rem;
+        bottom: 2rem;
     }
 }
