--- a/public/css/board.css
+++ b/public/css/board.css
@@ -70,7 +70,7 @@ html, body{
 }
 
 #colors .color:nth-child(5){
-    background-color: yellow;
+    background-color: purple;
     border: none;
 }
 
