--- a/public/css/board.css
+++ b/public/css/board.css
@@ -13,7 +13,7 @@ html, body{
 .container{
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     margin: 0;
     justify-content: center;
